<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.leeds.ccg.andyt</groupId>
    <artifactId>agdt-java-generic-math</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>agdt-java-generic-math</name>
    <url>https://github.com/agdturner/agdt-java-generic-math</url>
    <description>A Java Library for arithmetic and statistics.</description>
    <scm>
        <url>git@github.com:agdturner/agdt-java-generic-math.git</url>
        <connection>scm:git:git@github.com:agdturner/agdt-java-generic-math.git</connection>
        <developerConnection>scm:git:git@github.com:agdturner/agdt-java-generic-math</developerConnection>
    </scm>
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://github.com/agdturner/agdt-java-generic-math/LICENSE.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <organization>
        <name>Centre for Computational Geography</name>
        <url>http://www.ccg.leeds.ac.uk/</url>
    </organization>
    <developers>
        <developer>
            <id>agdturner</id>
            <name>Andy Turner</name>
            <email>a.g.d.turner@leeds.ac.uk</email>
            <organization>University of Leeds</organization>
            <organizationUrl>http://www.leeds.ac.uk</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <agdt-java-generic.version>1.0-SNAPSHOT</agdt-java-generic.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic</artifactId>
            <version>${agdt-java-generic.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <repositories>
        <!--
        <repository>
            <id>agdt-java-generic</id>
            <name>GitHub agdturner agdt-java-generic Repository</name>
            <url>https://github.com/agdturner/agdt-java-generic/tree/master/target/mvn-repo/uk/ac/leeds/ccg/andyt/agdt-java-generic</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        -->
    </repositories>
    
    <distributionManagement>
        <repository>
            <id>internal</id>
            <url>file://${project.build.directory}/mvn-repo</url>
        </repository>
    </distributionManagement>
</project>